welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:55: error: Unmatched closing brace '}' ignored here
}
^