welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
def peindre() {
	baisseBrosse()
	leveBrosse()
}
}
def faireCarre() {
	avance()
	getCouleurBrosse(Color.red)
	peindre()
	avance()
	getColeurBrosse(Color.blue)
	peindre()
	avance()
	gauche()
	avance()
	peindre()
	avance()
	getCouleurBrosse(Color.green)
	peindre()
	avance()
	gauche()
	avance()
	peindre()
	avance()
	getColeurBrosse(Color.yellow)
	peindre()
	avance()
	gauche()
	avance()
	peindre()
	avance()
	getColeurBrosse(Color.red)
	peindre()
	avance()
	gauche()
	for (x<- 1 to 4 ) {
		avance()
	}
}

faireCarre()








}
